objects/Skill_req__c.object
<CustomObject>
    <fields>
        <fullName>Data_Mining__c</fullName>
        <label>Data Mining</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Skill reqs</relationshipLabel>
        <relationshipName>Skill_reqs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Skill req</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill req Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill reqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>